fix z-index & i18n

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -84,7 +84,7 @@ section.is-fullheight {
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
   will-change: transform;
   transition: all .5s @e-layer;
   pointer-events: none;
